果然井号是一定要加的

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <i class="material-icons menu-icon">dehaze</i>
             <div class="slide-menu" ng-controller="sideBarController">
                 <nav>
-                    <a ng-repeat="list in lists" ng-href="{{list}}">{{list}}</a>
+                    <a ng-repeat="list in lists" ng-href="#/{{list}}">{{list}}</a>
                 </nav>
             </div>
         </header>
